--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/*footerのcss*/
+.footer{
+  max-height: 200px;
+  width: 100%;
+  background-color: #EEEEEE;
+  font-size: 15px;
+  position: absolute;
+  bottom: 0;
+}
+
+.aweiof {
+  padding: 20px;
+}
+
+.aaaa {
+  background-color: #EEEEEE;
+  padding-top: 10px;
+  color: #00000f;
+  position: relative;
+
+}
+
+.aad32 {
+  text-align: right;
+  padding-right: 20px;
+  background-color: #EEEEEE;
+  margin-bottom: 5px;
+  color: #00000f; 
+  position: absolute;
+  right: 0;
+  bottom: 0;
+
+}
+
+.aae {
+  padding-top: 3px;
+}
+
+.aaai {
+  margin-bottom: 2px;
+  text-align: center;
+  font-size: 13px;
+  color: #000003;
+}
