--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,11 @@ code {
   font-size: 13px;
   color: #000003;
 }
+
+/*案件詳細画面のcss*/
+.line_left{
+  padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #474747;
+    border-left: double 7px #4ec4d3;/*左線*/
+}
