--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+.App {
+  background-color: #000003;
+  min-height: 100vh;
+  position: relative;
+}
 body {
+  padding:0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -14,10 +20,12 @@ code {
 
 /*footerのcss*/
 .footer{
-  max-height: 200px;
+  min-height: 200px;
   width: 100%;
   background-color: #EEEEEE;
   font-size: 15px;
+  margin-top: auto;
+  bottom: 0;
   position: absolute;
 }
 
