--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 .App {
-  background-color: #000003;
-  min-height: 100vh;
+  /*background-color: #000003;*/
   position: relative;
 }
 body {
@@ -26,6 +25,7 @@ code {
   font-size: 15px;
   margin-top: auto;
   bottom: 0;
+  margin-top: 100vh;
 }
 
 .aweiof {
